--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: 10vh;
 }
 .grid-wrapper {
     display: grid;
@@ -19,4 +21,7 @@ body {
     width: 100%;
     height: 100%;
     background: white;
+}
+.paintSquare.painted {
+    background: black;
 }
